--- a/source/index.html
+++ b/source/index.html
@@ -1,9 +1,19 @@
-  <html lang="en">
-  	<head>
-  		<link rel="stylesheet" href="vendors/css/bootstrap.css">
-  		<script src="vendors/js/jquery-3.2.1.min.js"></script>
-  		<link rel="stylesheet" href="vendors/fonts/font-awesome.min.css">
-  	</head>
-  	<body>
-  	</body>
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="vendors/css/bootstrap.css">
+<link rel="stylesheet" href="vendors/fonts/font-awesome.min.css">
+<script src="vendors/js/jquery-3.2.1.min.js"></script>
+<script src="vendors/js/d3.min.js"></script>
+
+<script src="assets/js/fileparser.js"></script>
+<script src="assets/js/table_creator.js"></script>
+</head>
+<body>
+<script>
+	console.log(parse("data/dados-tp1.csv"))
+	document.write(createTable());
+</script>
+
+</body>
 </html>
