Pro francisco brincar

--- a/TP2/src/index.html
+++ b/TP2/src/index.html
@@ -8,14 +8,35 @@
 	<script src="vendors/js/jquery-3.2.1.min.js"></script>
 	<script src="vendors/js/d3.min.js"></script>
 	<script src="vendors/js/bootstrap.min.js"></script>
-
 	<script src="assets/js/parser.js"></script>
 </head>
+
 <body>
-<div></div>
-<script>
-	parsecsv("data/data.csv");
+
+ <script>
+ 	parsecsv("data/data.csv");
 	parsejson("data/countries.json");
+
+	//Width and height
+	var w = 500;
+	var h = 50;
+	var svg = d3.select("body")
+        .append("svg")
+        .attr("width", w)   // <-- Here
+        .attr("height", h); // <-- and here!
+	
+	var dataset = [ 5, 10, 15, 20, 25 ];
+	var circles = svg.selectAll("circle")
+         .data(dataset)
+         .enter()
+         .append("circle");
+	circles.attr("cx", function(d, i) {
+            return (i * 50) + 25;
+        })
+       .attr("cy", h/2)
+       .attr("r", function(d) {
+            return d;
+       });
 </script>
 
 
