--- a/TP2/src/index.html
+++ b/TP2/src/index.html
@@ -13,6 +13,11 @@
 	<script src="vendors/js/bootstrap.min.js"></script>
 	<script src="assets/js/parser.js"></script>
     <script src="assets/js/plotter.js"></script>
+<style>
+    h1{
+        text-align: center;
+    }
+</style>
 </head>
 
 <body>
