--- a/TP3/src/index.html
+++ b/TP3/src/index.html
@@ -24,6 +24,11 @@
             height: 400px;
             width: 900px;
         }
+
+        .bar-chart-container {
+            width: 900px;
+        }
+
         .chart div {
             font: 10px sans-serif;
             background-color: steelblue;
@@ -44,8 +49,19 @@
             <button class="radio-inline" onclick="updateVisualization()">Gerar visualização</button>
         </div>
 
-        <div class="chart" id="greatest-chart"></div><br>
+        <h3>Maiores geradoras</h3>
+        <div class="chart" id="greatest-chart"></div>
+
+        <h3>Menores geradoras</h3>
         <div class="chart" id="smallest-chart"></div>
+
+        <h3>Maiores crescimentos (%)</h3>
+        <div class="chart" id="growth-chart"></div>
+
+        <h3>Maiores quedas (%)</h3>
+        <div class="chart" id="decrease-chart"></div>
+
+        <h3>Distribuição</h3>
         <div id="tree-map-container">
             <div id="tree-map"></div>
         </div>
