sem sparkline ainda mas junto das mudanças do pedro

--- a/TP3/src/index.html
+++ b/TP3/src/index.html
@@ -16,10 +16,7 @@
     <script src="assets/js/parser.js"></script>
     <script src="assets/js/plotter.js"></script>
     <script src="assets/js/treemap.js"></script>
-<<<<<<< HEAD
     <link href="assets/css/page_base.css" type="text/css" rel="stylesheet" />
-=======
->>>>>>> origin/master
     <style>
         h1 {
             text-align: center;
@@ -29,13 +26,10 @@
             width: 900px;
         }
 
-<<<<<<< HEAD
-=======
         .bar-chart-container {
             width: 900px;
         }
 
->>>>>>> origin/master
         .chart div {
             font: 10px sans-serif;
             background-color: steelblue;
@@ -78,10 +72,10 @@
     </div>
     <div class="content">
         <div class="top_block cresc_div">
-            <h3>Maiores crescimentos (%)</h3>
+            <h3>Maiores crescimentos</h3>
             <div class="chart" id="growth-chart"></div>
 
-            <h3>Maiores quedas (%)</h3>
+            <h3>Maiores quedas</h3>
             <div class="chart" id="decrease-chart"></div>
         </div>
 
